unused: set "ignore: src/test/"

--- a/rocro.yml
+++ b/rocro.yml
@@ -1,5 +1,6 @@
 inspecode:
 
   unused:
+    ignore: src/test/
     options: [ --single-occurrence, --all-likelihoods ]
     thresholds: { num-issues: 999 }
