run spotbugs and infer without JUnit

--- a/rocro.yml
+++ b/rocro.yml
@@ -1,18 +1,8 @@
 inspecode:
 
-  ## FAILURE: Build failed with an exception.
-  ##
-  ## * What went wrong:
-  ## Execution failed for task ':test'.
-  ## > Process 'Gradle Test Executor 1' finished with non-zero exit value 137
-  ##   This problem might be caused by incorrect test process configuration.
-  ##   Please refer to the test execution section in the User Manual at https://docs.gradle.org/5.4.1/userguide/java_testing.html#sec:test_execution
-  ##
-  ## * Try:
-  ## Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output. Run with --scan to get full insights.
-  ##
-  ## * Get more help at https://help.gradle.org
-  ##
+  infer:
+    thresholds: { num-issues: 999 }
+
   spotbugs:
     options:
       -targets: .
