correct again (remove backspace char.)

--- a/rocro.yml
+++ b/rocro.yml
@@ -19,13 +19,13 @@ inspecode:
   ## > Task :kerberizedTest
   ##---------------------------------------------------------------------------
   spotbugs:
-  - &spotbugs-base-config
+  - &base-config
     options:
-      -targets: /
+      -targets: .
     thresholds: { num-issues: 999 }
-  - <<: *spotbugs-base-config
+  - <<: *base-config
     machine: { cpu: 1.0 }
-  - <<: *spotbugs-base-config
+  - <<: *base-config
     machine: { cpu: 1.5 }
-  - <<: *spotbugs-base-config
+  - <<: *base-config
     machine: { cpu: 2.0 }
